// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Modal docKit example UU5.Bricks.Modal example01 1`] = `
<div
  className="uu5-bricks-modal"
  id="modalID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="shown"
      id="modalID-header"
      key="modalID-header"
      underline={false}
    />
    <modal-body
      content={
        Array [
          "This modal has props ",
          <Code
            className={null}
            content="shown"
            controlled={true}
            disabled={false}
            dynamic={false}
            hidden={false}
            id="idCODE"
            ignoreInnerHTML={false}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            parent={null}
            pureRender={false}
            ref_={null}
            selected={false}
            style={null}
            tooltip={null}
          />,
          " and therefore is displayed right away.",
        ]
      }
      id="modalID-body"
      key="modalID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props checkGrammar=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props checkGrammar=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props checkHighlight=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props checkHighlight=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props checkSpaces=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props checkSpaces=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props className="my-classname" 1`] = `
<div
  className="uu5-bricks-modal my-classname uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props className="test-classname" 1`] = `
<div
  className="uu5-bricks-modal test-classname uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-body
      content="This is Content from ContentMixin"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props content=12345 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-body
      content={12345}
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props controlled=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props controlled=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props default props 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props disabled=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props disabled=false 3`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props disabled=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-disabled uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props disabled=true 3`] = `
<div
  className="uu5-bricks-modal uu5-common-disabled uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props dynamic=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props dynamic=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-modal uu5-bricks-modal-isfooter uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
    <modal-footer
      content={
        <div>
          Footer of section
        </div>
      }
      id="uuID-footer"
      key="uuID-footer"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props forceRender=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props forceRender=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props fullTextSearchPriority=0 1`] = `
<div
  className="uu5-bricks-modal uu-fulltextsearch-0 uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props fullscreen=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props fullscreen=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper uu-bricks-r58rvk"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content={
        <div>
          Header of section
        </div>
      }
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props hidden=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props hidden=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props id="myId" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="myId"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="myId-header"
      key="myId-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="myId-body"
      key="myId-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props id="test-id" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="test-id"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="test-id-header"
      key="test-id-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="test-id-body"
      key="test-id-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level="0" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level="1" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level="2" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level="3" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level="4" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level="5" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level="6" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level=0 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level=1 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level=2 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level=3 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level=4 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level=5 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props level=6 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props mountContent="onFirstRender" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props mountContent=undefined 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props mountContent=undefined 2`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props name="myName" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  name="myName"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props nestingLevel="box" 3`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Modal props nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.Modal props nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Modal props nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Modal props nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props noIndex=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props noIndex=true 1`] = `
<div
  className="uu5-bricks-modal uu5-noindex uu-fulltextsearch-0 uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props noPrint=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props noPrint=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props offsetTop="auto" 1`] = `
<div
  className="uu5-bricks-modal uu-bricks-4bdyp8 uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu-bricks-1vvp1xk uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props offsetTop=200 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu-bricks-w737gy uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props overflow=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props overflow=true 1`] = `
<div
  className="uu5-bricks-modal uu5-bricks-modal-overflow uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      className="uu5-bricks-modal-body-overflow"
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props pureRender=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props pureRender=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props scrollableBackground=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props scrollableBackground=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props selected=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props selected=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-selected uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props shown=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props shown=true 1`] = `
<div
  className="uu5-bricks-modal"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props size="auto" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-auto uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props size="l" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-l uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props size="m" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props size="max" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-max uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props size="s" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-s uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props sticky=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props sticky=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      _sticky={true}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props stickyBackground=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props stickyBackground=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "borderRadius": "2px",
      "padding": "8px",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "backgroundColor": "red",
      "color": "blue",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props style={"margin":8} 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "margin": 8,
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props textCorrector=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props textCorrector=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title="My Tooltip"
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props underline=false 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={false}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props underline=true 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="noHeader"
      id="uuID-header"
      key="uuID-header"
      underline={true}
    />
    <modal-body
      content="noBody"
      id="uuID-body"
      key="uuID-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal props.Function UU5.Bricks.Modal -  onClose() should be called 1`] = `
<Modal
  header="sticky"
  id="idModal"
  onClose={[Function]}
  shown={true}
>
  This modal has props shown = true and onClose eventn handlers.
</Modal>
`;

exports[`UU5.Bricks.Modal props.Function UU5.Bricks.Modal -  onClose() should be called 2`] = `
<Modal
  header="sticky"
  id="idModal"
  onClose={[Function]}
  shown={true}
>
  This modal has props shown = true and onClose eventn handlers.
</Modal>
`;
